--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.4.0'
     compile 'com.wx.wheelview:wheelview:1.3.3'
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
+    compile 'com.android.support:cardview-v7:25.3.1'
 }
