1、添加习惯界面 2、新习惯界面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".acitvity.AddHabitActivity"></activity>
+        <activity android:name=".acitvity.AddHabitActivity" android:theme="@style/TranslucentTheme"></activity>
     </application>
 
 </manifest>
