--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,14 +10,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".acitvity.MainActivity" android:theme="@style/TranslucentTheme">
+        <activity android:name=".actvity.MainActivity" android:theme="@style/TranslucentTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".acitvity.AddHabitActivity" android:theme="@style/TranslucentTheme"></activity>
+        <activity android:name=".actvity.AddHabitActivity" android:theme="@style/TranslucentTheme"></activity>
+        <activity android:name=".actvity.SituationActivity"></activity>
     </application>
 
 </manifest>
