--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     compile 'com.wx.wheelview:wheelview:1.3.3'
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
     compile 'com.android.support:cardview-v7:25.3.1'
+    compile 'com.android.support:recyclerview-v7:25.1.1'
 }
