--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         </activity>
         <activity android:name=".actvity.AddHabitActivity" android:theme="@style/TranslucentTheme"></activity>
         <activity android:name=".actvity.SituationActivity"></activity>
+        <activity android:name=".actvity.MyAddHabitActivity"/>
     </application>
 
 </manifest>
