第一次使用，推荐习惯。（还有习惯详情里面  编辑 弹窗没写）   个人中心没有改动，是因为还没给我图（微笑脸）

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
         <activity android:name=".activity.AddHabitActivity" android:theme="@style/TranslucentTheme"></activity>
         <activity android:name=".activity.SituationActivity" android:theme="@style/TranslucentTheme"></activity>
         <activity android:name=".activity.MyAddHabitActivity" android:theme="@style/TranslucentTheme"/>
+        <activity android:name=".activity.FirstRunActivity" android:theme="@style/TranslucentTheme"/>
         <activity android:name=".activity.StartActivity" android:theme="@style/Theme.AppStartLoadTranslucent">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
