--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,28 +2,56 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="f3.nsu.com.habit">
 
+
     <application
         android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:persistent="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.MainActivity" android:theme="@style/TranslucentTheme">
+        <activity
+            android:name=".activity.MainActivity"
+            android:theme="@style/TranslucentTheme">
 
         </activity>
-        <activity android:name=".activity.AddHabitActivity" android:theme="@style/TranslucentTheme"></activity>
-        <activity android:name=".activity.SituationActivity" android:theme="@style/TranslucentTheme"></activity>
-        <activity android:name=".activity.MyAddHabitActivity" android:theme="@style/TranslucentTheme"/>
-        <activity android:name=".activity.FirstRunActivity" android:theme="@style/TranslucentTheme"/>
-        <activity android:name=".activity.StartActivity" android:theme="@style/Theme.AppStartLoadTranslucent">
+        <activity
+            android:name=".activity.AddHabitActivity"
+            android:theme="@style/TranslucentTheme"></activity>
+        <activity
+            android:name=".activity.SituationActivity"
+            android:theme="@style/TranslucentTheme"></activity>
+        <activity
+            android:name=".activity.MyAddHabitActivity"
+            android:theme="@style/TranslucentTheme" />
+        <activity
+            android:name=".activity.StartActivity"
+            android:theme="@style/Theme.AppStartLoadTranslucent">
+            <!--android:process=":f3.nsu.com.habit.main"-->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service
+            android:name=".service.ClockTimeService"
+            android:enabled="true"
+            android:process=":service.main">
+            <!--该属性设置为true可以确保服务完全不能被kill   但需要系统uid-->
+            <!--android:persistent="true"-->
+            <intent-filter>
+                <action android:name="com.habit.service" />
+                <!--<category android:name="android.intent.category.DEFAULT"/>-->
+            </intent-filter>
+        </service>
+        <receiver android:name=".broadcast.ClockReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.USER_PRESENT"/>
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
