1、标题栏与状态栏的统一 2、扩大了所有按钮点击范围 3、用户第一次使用时，轮播图供选择 4、习惯详情编辑按钮弹窗 5、完善个人中心界面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".activity.FirstRunActivity"
+            android:theme="@style/TranslucentTheme"/>
 
         <service
             android:name=".service.ClockTimeService"
